text alignation fixed and animation dropdown

--- a/src/style/_navBar.scss
+++ b/src/style/_navBar.scss
@@ -33,15 +33,13 @@
         fill: $riot-red;
       }
 }
-.invisble{
+.invisible{
     position: absolute;
-    background: #fff;
-    color: #000000;
-    font-size: 18px;
-    overflow: hidden;
+    background: white;
     height: 0px;
+    width: 100%;
     padding: 0;
-    left: 0;
+
 }
 .riot-white-menu{
     position: absolute;
@@ -49,10 +47,9 @@
     width: 100%;
     height: 500px;
     padding: 0px 30px;
-
     overflow: auto;
     transform: translate(-117px, 0px);
-    transition: height 4s;
+    transition: height 1s;
 
 
 }
@@ -82,6 +79,7 @@
 }
 .arrow-logo-on-title-items{
     margin-left: 5px;
+    margin-bottom: 10px;
     width: 10px;
     height: 100%;
     opacity: 60%;
@@ -103,7 +101,7 @@
         margin-left: 60px;
         &:hover{
             background-color: #313131;
-    
+            
         }
     }
 
@@ -125,7 +123,7 @@
 }
 .title-container-item-nav{
     height: 100%;
-
+    margin-bottom: 10px;
 }
 .special-list{
     list-style: none;
@@ -173,6 +171,7 @@ a{
     height: 100%;
     margin: 0;
     padding: 0;
+    transform: translate(0, -5px);
 }
 #search-bar-container{
     position: relative;
